public/styles.css
* {
    margin: 0;
    padding: 0;
    font-size: 16px;
    overflow-x:hidden;
    font-family: sans-serif;
}

body, html {
    height:100%;
    width:100%;
}


/* server login menu */
#server_browser {
    height: 100%;
    width: 100%;
    background-color: #23272A;
}

#server_browser h1 {
    position: absolute;
    left: 40%;
    font-size: 5rem;
    color:white;
}

.server_menu_box {
    position: relative;
    width: 60%;
    height: 50%;
    left: 22%;
    top: 20%;
    background-color:white;
    overflow-y: scroll;
}

.server_list {
    width:70%;
    height: 10%;
    background-color:lightgrey;
    font-size: 2rem;
    color:black;
}

#chat_content {
    display:none;
}

.usernameModal {
    position: fixed;
    padding:0;
    margin:0;
    top:0;
    left:0;
    z-index: 1;
    width:100%;
    height:100%;
    background-color:rgba(0, 0, 0, 0.5);
}

/* options menu */
.optionsModal {
    position: fixed;
    display: none;
    padding:0;
    margin:0;
    top:20%;
    left:30%;
    width:40%;
    height:40%;
    z-index: 1;
    background-color:rgba(20, 20, 20);
    border-radius: 10%;
}

.optionsModal .wrapper {height:20%; width:100%; text-align: center; font-size: 3vh; color:white}
.optionsModal .wrapper img {position:absolute; height:8%; left:85%; top:2%;}
.optionsModal .wrapper img:hover {filter:invert(20%);}

.optionsModal .optionChoices {
    display:flex;
    flex-direction: column;
    height: 80%;
    width: 100%;
    top:20%;
}

.form-wrapper {position:relative; height:45%; left:40%}
.form-wrapper input {display:none;}
.filelabel {
    text-align: center;
    font-size: 2vh;
    color:white;
}

.file-img-text {
    position:relative;
    left:-40%;
    top:22%;
    z-index: 2;
    color:white;
    opacity: 0;
}

.optionsModal .optionChoices label img {
    position:absolute;
    border-radius: 50%;
    left:2.5%;
    width: 10rem;
    height: 10rem;
    object-fit: cover;
}

.optionsModal .optionChoices label:hover img {filter: invert(30%);}
.optionsModal .optionChoices label:hover .file-img-text {opacity: 1;}

.optionChoices .slider {
    position:relative;
    width: 60%;
    top: 20%;
    left: 20%;
    opacity: 0.7;
    transition: opacity 0.2s;
    outline: none;
}

.slider:hover {
    opacity: 1;
}

#change-text-size {
    position: relative;
    left:42%;
    color:white;
    font-size: 1.5rem;
    padding-bottom: 5px;
}

#px12 {position: relative; color:white; font-size:1.3rem; left:20%;}
#px16 {position: relative; color:white; font-size:1.3rem; left:43%;}
#px24 {position: relative; color:white; font-size:1.3rem; left:65%;}

.usernameModal-inner {
    text-align: center;
    position:fixed;
    background-color: black;
    margin:auto;
    width:100%;
    height:100%;
}

.usernameModal-inner h1 {
    position:relative;
    top:25%;
    color:white;
    font-size: 5vh;
}

.usernameModal-inner .userInput {
    position:fixed;
    top: 50%;
    left: 30%;
    width: 40%;
    height:5%;
    font-size:2vh;
    text-align: center;
    border-top-style: hidden;
    border-right-style: hidden;
    border-left-style: hidden;
    border-bottom-style: groove;
    background-color: black;
    color:white;
}

.usernameModal-inner .userInput:focus {
    outline:0;
}

/* main chat window that user list and chatbox sit in */
.chatwindow {
    display: flex;
    height: 100%;
    width: 100%;
    background-color: #23272A;
}

.chatwindow #cog {
    position:absolute;
    top:3%;
    left: 95%;
    height:3%;
}

.chatwindow #cog:hover {
    filter: invert(40%);
}
/* end of main chat window */


/* Start of box where messages go, the area messages reside */
.chatbox {
    position:relative;
    left:10%;
    height: 90%;
    overflow-y: scroll;
    width:90%;
    background-color: #23272A;
}

.inputbox {
    position:absolute;
    left: 11.6%;
    top: 90%;
    height:5%;
    width:85%;
    background-color: #2C2F33;
    border-radius: 8px;
    overflow-y: hidden;
}

.chatbar {
    position:absolute;
    height:100%;
    width:100%;
    background-color: #2C2F33;
    border-radius: 8px;
    color:white;
    padding-left: 10px;
    outline: none;
}

/* Far left side of screen that holds usernames */
.userlist {
    position: absolute;
    width:10%;
    text-align: center;
    height:100%;
    background-color: #181a1b;
}

.userlist span b {
    position:relative;
    font-size: 1.5vw;
    color:white;
}

.userBox {
    position:relative;
    text-align: center;
    margin-bottom: 10%;
    padding-bottom: 10px;
    width:100%;
    height:3%;
}

.name {
    position:relative;
    font-size: 1vw;
    top:30%;
    color:white;
    text-align: center;
}

.numUsers {
    position: relative;
    top:90%;
    color:white;
    font-size: 1vw;
}

/* Messages that appear in chatting area */
.chatbox .message {
    display: grid;
    padding:10px;
    overflow-wrap:break-word;
    max-width: 80%;
    margin-bottom: 1vw;
}

.chatbox .text-pfp {
    position: absolute;
    border-radius: 50%;
    height: 4rem;
    width:4rem;
    left: 2%;

    /* scales different resolution images to same size */
    object-fit: cover;
}

.chatbox .user {
    position:relative;
    left: 7%;
    font-weight: bold;
    opacity: 0.7;
    margin-bottom: 0px;
    font-size:1.5em;
}

.chatbox .body {
    display:inline;
    position:relative;
    left:7%;
    color:white;
    font-size:2em;
}

.chatbox span {
    color: gray;
    font-size:0.8em;
}

